- add category to post if it doesn't exist when. we create post
- get posts by category
